syntax = "proto3";

option java_package = "com.example.more";
option java_outer_classname = "MoreTest";
option java_multiple_files = true;

message MoreTestMsg {
  string bar = 1;
}

message MoreTestFoo {
  string stuff = 1;
}
